# RedisInstall

./: .gitignore  CMakeLists.txt  README.md  USAGE.txt  build_linux.sh  deploy_windows.bat  install_dependencies_linux.sh  installwizard.cpp  installwizard.h  main.cpp  mainwindow.cpp  mainwindow.h  portchecker.cpp  portchecker.h  quick_deploy.bat  redismanager.cpp  redismanager.h  serviceconfig.cpp  serviceconfig.h  servicemanager.cpp  servicemanager.h
